--- a/soccer.html
+++ b/soccer.html
@@ -2,197 +2,182 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <!-- Proper mobile scaling + safe area on modern phones -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
   <title>Desktop Soccer Game</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: 'Montserrat', sans-serif;
-      padding: 30px;
-      background-color: #fff;
-      max-width: 900px;
-      margin: auto;
-      color: #111;
+    :root{
+      --brand:#1f64b1;
+      --text:#111;
+      --maxw:900px;
+      --pad:clamp(16px, 3.5vw, 32px);
     }
 
-    h1, h2 {
-      font-weight: 600;
+    /* Base */
+    html, body { height: 100%; }
+    body{
+      font-family:'Montserrat', system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      margin:0;
+      color:var(--text);
+      background:#fff; /* force light background */
+      -webkit-font-smoothing:antialiased;
+      text-rendering:optimizeLegibility;
+    }
+    .container{
+      max-width:var(--maxw);
+      margin:0 auto;
+      padding:calc(var(--pad) + 24px) var(--pad) var(--pad);
     }
 
-    h3 {
-      font-weight: 500;
-      margin-top: 30px;
+    /* Headings & text sizes scale with screen */
+    h1{ font-weight:600; font-size:clamp(28px, 4.2vw, 40px); margin:0 0 6px; }
+    h2{ font-weight:600; font-size:clamp(18px, 2.6vw, 22px); margin:8px 0 0; }
+    h3{ font-weight:500; font-size:clamp(18px, 2.4vw, 21px); margin:28px 0 8px; }
+    p, li{ font-size:clamp(15px, 2.2vw, 17px); line-height:1.6; }
+
+    /* Back link (touch friendly) */
+    .back-link{
+      position:fixed; inset:16px auto auto 16px;
+      z-index:1000;
+      background:rgba(255,255,255,0.9);
+      border:1px solid #e8e8e8;
+      padding:8px 12px;
+      border-radius:10px;
+      text-decoration:none; font-weight:700; font-size:clamp(14px, 2.5vw, 16px);
+      color:var(--brand);
+      backdrop-filter:saturate(150%) blur(6px);
     }
 
-    .figure-flex {
-      display: flex;
-      align-items: flex-start;
-      gap: 20px;
-      margin: 30px 0;
-      flex-wrap: wrap;
+    /* Media defaults */
+    img, video{ display:block; max-width:100%; height:auto; border-radius:8px; }
+    figure{ margin:0; }
+    figcaption, .caption{
+      font-size:clamp(12px, 2vw, 13px);
+      color:#555; text-align:center; margin-top:6px;
     }
 
-    .figure-flex img,
-    .figure-flex video {
-      max-width: 300px;
-      height: auto;
-      border-radius: 4px;
-      flex-shrink: 0;
+    /* Flexible media+text block */
+    .figure-flex{
+      display:flex; flex-wrap:wrap; gap:16px; margin:24px 0;
+      align-items:flex-start;
     }
+    .f-col{ flex:1 1 320px; min-width:260px; }
+    .f-media{ max-width:520px; margin:0 auto; }
 
-    .figure-flex p {
-      font-size: 15px;
-      line-height: 1.6;
-      flex: 1;
-      min-width: 250px;
+    /* Side-by-side gallery that collapses on phones */
+    .side-by-side{
+      display:flex; flex-wrap:wrap; gap:16px; margin-top:20px;
     }
+    .side-by-side figure{ flex:1 1 320px; min-width:260px; text-align:center; }
 
-    .caption {
-      font-size: 13px;
-      text-align: center;
-      color: #555;
-      margin-top: 8px;
-    }
+    /* Full-width video block */
+    .video-full{ width:100%; margin:16px 0; }
 
-    ul {
-      font-size: 15px;
-      line-height: 1.6;
-      padding-left: 20px;
-    }
+    /* Lists */
+    ul{ padding-left:20px; margin:0; }
 
-    .video-full {
-      width: 100%;
-      max-width: 100%;
-      margin: 20px 0;
-      border-radius: 4px;
-    }
-
-    img {
-      border-radius: 4px;
-      max-width: 100%;
-      height: auto;
-    }
-
-    .side-by-side {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      margin-top: 20px;
-    }
-
-    .side-by-side figure {
-      flex: 1;
-      min-width: 300px;
-      text-align: center;
-    }
-
-    figure img, figure video {
-      width: 100%;
-      border-radius: 4px;
-    }
-
-    figure figcaption {
-      font-size: 13px;
-      color: #555;
-      margin-top: 6px;
+    /* Small screens: tighten padding a bit */
+    @media (max-width:480px){
+      .container{ padding:56px 14px 18px; }
+      .back-link{ inset:12px auto auto 12px; padding:7px 10px; }
     }
   </style>
 </head>
 <body>
-  <div style="position: fixed; top: 20px; left: 20px; z-index: 1000;">
-    <a href="index.html" style="text-decoration: none; font-weight: bold; font-size: 16px; color: #1f64b1;">← Projects</a>
-  </div>
-  <h1>Desktop Soccer Game</h1>
-  <h3>Project Timeline: March 2024 – May 2024</h3>
+  <a class="back-link" href="index.html" aria-label="Back to Projects">← Projects</a>
 
-  <p>This project aimed to create a desktop-scale soccer game that combines mechatronics, mechanical design and user interactivity. 
-     The game simulates a mini soccer field where a user-controlled kicker competes against a moving goalkeeper, mounted on a linear actuator. 
-     It provided a hands-on opportunity to integrate design, fabrication, and programming skills in a playful, engaging format.</p>
+  <main class="container">
+    <h1>Desktop Soccer Game</h1>
+    <h3>Project Timeline: March 2024 – May 2024</h3>
 
-<h3>Components</h3>
-<div class="figure-flex">
-  <div style="flex: 1;">
-    <ul>
-      <li>1× Arduino Uno</li>
-      <li>1× HiLetgo L298N Motor Driver</li>
-      <li>1× NEMA11 stepper motor Linear Rail Actuator</li>
-      <li>1× Gikfun 2" 4Ω 3W Speaker</li>
-      <li>1× 3D Printed Flexible Kicker Mechanism</li>
-      <li>1× Laser-Cut Game Base and Structure</li>
-      <li>1× LED Display</li>
-      <li>1× Goal Frame with printed goalkeeper</li>
-      <li>1× Breadboard</li>
-      <li>Jumper wires, resistors, capacitors</li>
-      <li>Power supply (5V for logic, 12V for actuator)</li>
-    </ul>
-  </div>
-  <div style="flex: 1; text-align: center;">
-    <div>
-      <img src="images/soccer_sketch.png" alt="Sketch of Proposed Idea" style="max-width: 100%; height: auto;" />
-      <div class="caption">Figure 1. Sketch of Proposed Idea</div>
+    <p>This project aimed to create a desktop-scale soccer game that combines mechatronics, mechanical design and user interactivity. 
+       The game simulates a mini soccer field where a user-controlled kicker competes against a moving goalkeeper, mounted on a linear actuator. 
+       It provided a hands-on opportunity to integrate design, fabrication, and programming skills in a playful, engaging format.</p>
+
+    <h3>Components</h3>
+    <div class="figure-flex">
+      <div class="f-col">
+        <ul>
+          <li>1× Arduino Uno</li>
+          <li>1× HiLetgo L298N Motor Driver</li>
+          <li>1× NEMA11 stepper motor Linear Rail Actuator</li>
+          <li>1× Gikfun 2" 4Ω 3W Speaker</li>
+          <li>1× 3D Printed Flexible Kicker Mechanism</li>
+          <li>1× Laser-Cut Game Base and Structure</li>
+          <li>1× LED Display</li>
+          <li>1× Goal Frame with printed goalkeeper</li>
+          <li>1× Breadboard</li>
+          <li>Jumper wires, resistors, capacitors</li>
+          <li>Power supply (5V for logic, 12V for actuator)</li>
+        </ul>
+      </div>
+      <div class="f-col f-media">
+        <figure>
+          <img src="images/soccer_sketch.png" alt="Sketch of Proposed Idea" loading="lazy" />
+          <figcaption>Figure 1. Sketch of Proposed Idea</figcaption>
+        </figure>
+      </div>
     </div>
-  </div>
-</div>
 
+    <div class="side-by-side">
+      <figure>
+        <img src="images/cardboard_design.jpg" alt="Cardboard Design" loading="lazy" />
+        <figcaption>Figure 2. Cardboard Design</figcaption>
+      </figure>
+      <figure>
+        <img src="images/final_design_frame.jpg" alt="Final Design Using Desktop" loading="lazy" />
+        <figcaption>Figure 3. Final Design Using Desktop</figcaption>
+      </figure>
+    </div>
 
-  <div class="side-by-side">
-    <figure>
-      <img src="images/cardboard_design.jpg" alt="Cardboard Design">
-      <figcaption>Figure 2. Cardboard Design</figcaption>
-    </figure>
-    <figure>
-      <img src="images/final_design_frame.jpg" alt="Final Design">
-      <figcaption>Figure 3. Final Design Using Desktop</figcaption>
-    </figure>
-  </div>
+    <h3>Ideation</h3>
+    <p>The original goal for the desktop soccer game was to create a fully portable and compact system that could be easily set up and played anywhere. 
+       To test this, I initially constructed a standalone base using cardboard. By using the desk itself as the foundation for the game, I eliminated the need 
+       for a bulky base and reduced the total number of components, resulting in a cleaner, more minimal footprint.</p>
 
-  <h3>Ideation</h3>
-  <p>The original goal for the desktop soccer game was to create a fully portable and compact system that could be easily set up and played anywhere. 
-     To test this, I initially constructed a standalone base using cardboard. By using the desk itself as the foundation for the game, I eliminated the need 
-     for a bulky base and reduced the total number of components, resulting in a cleaner, more minimal footprint.</p>
+    <h3>Design Process</h3>
+    <p>The final design featured a 3D printed kicking mechanism and a ball holder base to keep the ball in place before each kick. After testing various materials, 
+       TPU (Thermoplastic Polyurethane) was chosen for its flexibility and durability. The kicker’s infill density was reduced to enhance its springiness and improve 
+       shot power. The goal was also 3D printed and designed to align with the actuator-driven goalkeeper. Field boundaries were laser cut from acrylic, allowing for 
+       quick assembly and a clean, portable design.</p>
 
-  <h3>Design Process</h3>
-  <p>The final design featured a 3D printed kicking mechanism and a ball holder base to keep the ball in place before each kick. After testing various materials, 
-     TPU (Thermoplastic Polyurethane) was chosen for its flexibility and durability. The kicker’s infill density was reduced to enhance its springiness and improve 
-     shot power. The goal was also 3D printed and designed to align with the actuator-driven goalkeeper. Field boundaries were laser cut from acrylic, allowing for 
-     quick assembly and a clean, portable design.</p>
+    <video class="video-full" controls playsinline preload="metadata">
+      <source src="videos/soccer_test.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+    <div class="caption">Video 1. Prototype Tested</div>
 
-  <video class="video-full" controls>
-    <source src="videos/soccer_test.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
-  <div class="caption">Video 1. Prototype Tested</div>
+    <h3>Electronics Added</h3>
+    <p>To support two-player gameplay, the system included an electronic scoreboard powered by an Arduino Uno and displayed on an LCD screen. A custom 3D printed 
+       enclosure housed a set of mechanical buttons that allowed players to manually increase their score or reset it at any time. The buttons were wired to the 
+       Arduino, which updated the screen in real time. The modular casing made it easy to service or modify the electronics, and the Arduino-based system allowed 
+       for future expansion—such as adding automatic scoring or sound feedback.</p>
 
-  <h3>Electronics Added</h3>
-  <p>To support two-player gameplay, the system included an electronic scoreboard powered by an Arduino Uno and displayed on an LCD screen. A custom 3D printed 
-     enclosure housed a set of mechanical buttons that allowed players to manually increase their score or reset it at any time. The buttons were wired to the 
-     Arduino, which updated the screen in real time. The modular casing made it easy to service or modify the electronics, and the Arduino-based system allowed 
-     for future expansion—such as adding automatic scoring or sound feedback.</p>
+    <div class="side-by-side">
+      <figure>
+        <video controls playsinline preload="metadata">
+          <source src="videos/scoreboard.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+        <figcaption>Video 2. Working of Scoreboard</figcaption>
+      </figure>
+      <figure>
+        <img src="images/circuit_scoreboard.png" alt="Circuit for Scoreboard" loading="lazy" />
+        <figcaption>Figure 4. Circuit for Scoreboard</figcaption>
+      </figure>
+    </div>
 
-  <div class="side-by-side">
-    <figure>
-      <video controls>
-        <source src="videos/scoreboard.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
-      <figcaption>Video 2. Working of Scoreboard</figcaption>
-    </figure>
-    <figure>
-      <img src="images/circuit_scoreboard.png" alt="Circuit">
-      <figcaption>Figure 4. Circuit for Scoreboard</figcaption>
-    </figure>
-  </div>
+    <h3>Goalkeeper Integration</h3>
+    <p>To add a dynamic challenge to the game, a linear actuator was installed behind the goalpost, controlled by a motor driver and programmed to move the goalkeeper 
+       back and forth at random intervals. This movement made scoring more difficult and added an unpredictable, interactive element to each play. The actuator was 
+       synchronized with the rest of the system using the Arduino, ensuring reliable and responsive motion.</p>
 
-  <h3>Goalkeeper Integration</h3>
-  <p>To add a dynamic challenge to the game, a linear actuator was installed behind the goalpost, controlled by a motor driver and programmed to move the goalkeeper 
-     back and forth at random intervals. This movement made scoring more difficult and added an unpredictable, interactive element to each play. The actuator was 
-     synchronized with the rest of the system using the Arduino, ensuring reliable and responsive motion.</p>
-
-  <video class="video-full" controls>
-    <source src="videos/actuator.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
-  <div class="caption">Video 3. Final Design with Linear Actuator</div>
-
+    <video class="video-full" controls playsinline preload="metadata">
+      <source src="videos/actuator.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+    <div class="caption">Video 3. Final Design with Linear Actuator</div>
+  </main>
 </body>
 </html>
