--- a/crane_project.html
+++ b/crane_project.html
@@ -2,123 +2,147 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <!-- Proper mobile scaling + safe areas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
   <title>Crane Project – Mechanics Based Design</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 40px auto;
-      max-width: 1000px;
-      line-height: 1.6;
-      color: #222;
+    :root{
+      --brand:#1f64b1;
+      --text:#222;
+      --maxw:1000px;
+      --pad:clamp(16px, 3.5vw, 32px);
     }
-    h1, h2, h3, h4 {
-      margin-bottom: 0.5em;
+
+    /* Base */
+    html, body { height:100%; }
+    body{
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      margin:0;
+      color:var(--text);
+      background:#fff; /* force light background */
+      line-height:1.6;
+      -webkit-font-smoothing:antialiased;
+      text-rendering:optimizeLegibility;
     }
-    h1 {
-      font-size: 2em;
-      font-weight: bold;
+    .container{
+      max-width:var(--maxw);
+      margin:0 auto;
+      padding:calc(var(--pad) + 24px) var(--pad) var(--pad);
     }
-    h2 {
-      font-size: 1.2em;
-      font-weight: bold;
+
+    /* Back link (fixed & touch-friendly) */
+    .back-link{
+      position:fixed; inset:16px auto auto 16px;
+      z-index:1000;
+      background:rgba(255,255,255,0.9);
+      border:1px solid #e8e8e8;
+      padding:8px 12px;
+      border-radius:10px;
+      text-decoration:none; font-weight:700;
+      color:#333;
+      font-size:clamp(14px, 2.5vw, 16px);
+      backdrop-filter:saturate(150%) blur(6px);
     }
-    .caption {
-      font-style: italic;
-      text-align: center;
-      font-size: 0.95em;
-      margin-top: 6px;
-      margin-bottom: 24px;
+
+    /* Type scale */
+    h1{ margin:0 0 8px; font-size:clamp(28px, 4.2vw, 36px); font-weight:800; }
+    h2{ margin:16px 0 8px; font-size:clamp(18px, 2.6vw, 22px); font-weight:700; }
+    h3,h4{ margin:24px 0 8px; font-weight:700; }
+    p, li{ font-size:clamp(15px, 2.2vw, 17px); }
+
+    /* Media & captions */
+    img{ display:block; width:100%; height:auto; border-radius:8px; }
+    .caption{
+      font-style:italic; text-align:center; font-size:clamp(13px, 2vw, 15px);
+      color:#444; margin-top:6px; margin-bottom:18px;
     }
-    .back-link {
-      font-size: 1em;
-      margin-bottom: 20px;
-      display: inline-block;
-      text-decoration: none;
-      background: #eee;
-      padding: 6px 12px;
-      border-radius: 5px;
-      color: #333;
+
+    /* Flexible two-up that collapses on phones */
+    .side-by-side{
+      display:flex; flex-wrap:wrap; gap:12px; justify-content:center;
+      align-items:flex-start; margin-top:12px; margin-bottom:4px;
     }
-    .back-link:hover {
-      background: #ddd;
+    .side-by-side > .col{
+      flex:1 1 45%; min-width:260px;
     }
-    img {
-      width: 100%;
-      max-height: 450px;
-      object-fit: contain;
-      display: block;
-      margin: 0 auto;
+
+    /* Components list row */
+    .row{
+      display:flex; flex-wrap:wrap; gap:16px; justify-content:space-between;
     }
-    .side-by-side {
-      display: flex;
-      gap: 12px;
-      justify-content: center;
-      align-items: flex-start;
-      margin-top: 12px;
-      margin-bottom: 4px;
-      flex-wrap: wrap;
+    .row .list{
+      flex:1 1 45%; min-width:260px; margin:0;
+      padding-left:20px;
     }
-    .side-by-side img {
-      height: 400px;
-      object-fit: cover;
-      flex: 1 1 45%;
+
+    /* Constrain tall images gracefully on large screens only */
+    .hero-limit{ max-height:450px; object-fit:contain; }
+
+    /* Small screens: tighter padding */
+    @media (max-width:480px){
+      .container{ padding:56px 14px 18px; }
+      .back-link{ inset:12px auto auto 12px; padding:7px 10px; }
     }
   </style>
 </head>
 <body>
 
-  <a href="index.html" class="back-link">← Projects</a>
+  <a href="index.html" class="back-link" aria-label="Back to Projects">← Projects</a>
 
-  <h1>Mechanics Based Design – Crane Project</h1>
-  <h2>Project Timeline: <span style="color:#1f64b1;">March 2022 – May 2022</span></h2>
+  <main class="container">
+    <h1>Mechanics Based Design – Crane Project</h1>
+    <h2>Project Timeline: <span style="color:var(--brand);">March 2022 – May 2022</span></h2>
 
-  <p>
-    This project involved the complete design and fabrication of a mechanical crane capable of lifting a 10-pound load over a vertical distance of 5 feet using a carefully engineered gear train and pulley system. The system was fully modeled in CAD with the application of Geometric Dimensioning and Tolerancing (GD&T) to ensure precise fits, alignment, and efficient motion transfer.
-  </p>
+    <p>
+      This project involved the complete design and fabrication of a mechanical crane capable of lifting a 10-pound load over a vertical distance of 5 feet using a carefully engineered gear train and pulley system. The system was fully modeled in CAD with the application of Geometric Dimensioning and Tolerancing (GD&amp;T) to ensure precise fits, alignment, and efficient motion transfer.
+    </p>
 
-  <h2>Components</h2>
-  <div style="display: flex; justify-content: space-between; flex-wrap: wrap;">
-    <ul style="flex: 1 1 45%; margin: 0; padding-left: 20px;">
-      <li>4x Laser-Cut Acrylic Gears</li>
-      <li>2x Wooden Dowels (gear axles)</li>
-      <li>1x Machined Beam Arm</li>
-      <li>1x Pulley Assembly with Rollers</li>
-      <li>Assorted Washers, Spacers</li>
-    </ul>
-    <ul style="flex: 1 1 45%; margin: 0; padding-left: 20px;">
-      <li>1x Mounting Base Plate</li>
-      <li>Nylon String (lifting cable)</li>
-      <li>Weights (10 lb total)</li>
-      <li>M5 Screws and Fasteners</li>
-    </ul>
-  </div>
+    <h2>Components</h2>
+    <div class="row">
+      <ul class="list">
+        <li>4× Laser-Cut Acrylic Gears</li>
+        <li>2× Wooden Dowels (gear axles)</li>
+        <li>1× Machined Beam Arm</li>
+        <li>1× Pulley Assembly with Rollers</li>
+        <li>Assorted Washers, Spacers</li>
+      </ul>
+      <ul class="list">
+        <li>1× Mounting Base Plate</li>
+        <li>Nylon String (lifting cable)</li>
+        <li>Weights (10 lb total)</li>
+        <li>M5 Screws and Fasteners</li>
+      </ul>
+    </div>
 
-  <div class="side-by-side">
-    <img src="images/crane_image_1.jpg" alt="Crane gear system view">
-    <img src="images/crane_image_2.jpg" alt="Crane fully assembled view">
-  </div>
-  <p class="caption">Figure 1. The design of the completed crane</p>
+    <div class="side-by-side" style="margin-top:16px;">
+      <div class="col">
+        <img src="images/crane_image_1.jpg" alt="Crane gear system view" loading="lazy" class="hero-limit">
+      </div>
+      <div class="col">
+        <img src="images/crane_image_2.jpg" alt="Crane fully assembled view" loading="lazy" class="hero-limit">
+      </div>
+    </div>
+    <p class="caption">Figure 1. The design of the completed crane</p>
 
-  <h2>Laser-Cut Acrylic Gears</h2>
-  <p>
-    The gears were fabricated from clear acrylic sheets, typically ranging from 3mm to 6mm in thickness. Gear profiles were first designed using CAD software and exported as DXF or SVG files suitable for laser processing. A CO<sub>2</sub> laser cutter was used to cut the precise outlines, enabling clean and accurate meshing. After cutting, the edges of the gears were lightly sanded or flame-polished to remove any burrs or sharp edges.
-  </p>
+    <h2>Laser-Cut Acrylic Gears</h2>
+    <p>
+      The gears were fabricated from clear acrylic sheets, typically ranging from 3&nbsp;mm to 6&nbsp;mm in thickness. Gear profiles were first designed using CAD software and exported as DXF or SVG files suitable for laser processing. A CO<sub>2</sub> laser cutter was used to cut the precise outlines, enabling clean and accurate meshing. After cutting, the edges of the gears were lightly sanded or flame-polished to remove any burrs or sharp edges.
+    </p>
 
-  <h2>Wooden Dowels (Gear Axles)</h2>
-  <p>
-    The axles were created using hardwood or birch dowels, which offer both durability and low friction. The dowels were cut to the required lengths using a bandsaw or miter saw. Once cut, the ends were carefully sanded—either by hand or using a belt sander—to achieve smooth, splinter-free surfaces. In some cases, the ends were chamfered or turned on a lathe to improve alignment and fit with the gears and bushings.
-  </p>
+    <h2>Wooden Dowels (Gear Axles)</h2>
+    <p>
+      The axles were created using hardwood or birch dowels, which offer both durability and low friction. The dowels were cut to the required lengths using a bandsaw or miter saw. Once cut, the ends were carefully sanded—either by hand or using a belt sander—to achieve smooth, splinter-free surfaces. In some cases, the ends were chamfered or turned on a lathe to improve alignment and fit with the gears and bushings.
+    </p>
 
-  <h2>Machined Beam Arm</h2>
-  <p>
-    The beam arm, typically made from aluminum or steel stock, was first cut to rough dimensions using a bandsaw or waterjet cutter. Precision features such as holes and slots were added using a vertical CNC mill or a manual milling machine. These operations ensured tight tolerances and reliable alignment of moving components. Following machining, all edges and corners were deburred and polished using fine sandpaper or a handheld deburring tool.
-  </p>
+    <h2>Machined Beam Arm</h2>
+    <p>
+      The beam arm, typically made from aluminum or steel stock, was first cut to rough dimensions using a bandsaw or waterjet cutter. Precision features such as holes and slots were added using a vertical CNC mill or a manual milling machine. These operations ensured tight tolerances and reliable alignment of moving components. Following machining, all edges and corners were deburred and polished using fine sandpaper or a handheld deburring tool.
+    </p>
 
-  <h2>Pulley Assembly with Rollers</h2>
-  <p>
-    The pulley system was composed of multiple elements fabricated through a combination of machining and additive manufacturing. Pulleys were either machined from aluminum for strength or 3D printed using plastic for ease of prototyping. Holes for axles or bearings were drilled and reamed to allow for smooth, low-friction rotation. Rollers were turned on a lathe to ensure consistent diameter and finish.
-  </p>
-
+    <h2>Pulley Assembly with Rollers</h2>
+    <p>
+      The pulley system was composed of multiple elements fabricated through a combination of machining and additive manufacturing. Pulleys were either machined from aluminum for strength or 3D printed using plastic for ease of prototyping. Holes for axles or bearings were drilled and reamed to allow for smooth, low-friction rotation. Rollers were turned on a lathe to ensure consistent diameter and finish.
+    </p>
+  </main>
 </body>
 </html>
