--- a/solar_blinds.html
+++ b/solar_blinds.html
@@ -126,4 +126,17 @@
       </figure>
       <figure>
         <img src="images/final_design_solar.jpg" alt="Solar panel mounted for the blinds operator" loading="lazy">
-      </figur
+      </figure>
+    </div>
+    <div class="caption">Figure 2. Final design for the blinds operator.</div>
+
+    <div class="video-wrap">
+      <video controls playsinline preload="metadata">
+        <source src="videos/blinds_demo.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+      <div class="caption">Video 1. Demonstration of the blinds operator.</div>
+    </div>
+  </main>
+</body>
+</html>
