--- a/fea_bending.html
+++ b/fea_bending.html
@@ -2,161 +2,191 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <!-- Proper mobile scaling + safe areas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
   <title>Credit Card Bending Machine Design</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 40px auto;
-      max-width: 1000px;
-      line-height: 1.6;
-      color: #222;
+    :root{
+      --brand:#1f64b1;
+      --text:#222;
+      --maxw:1000px;
+      --pad:clamp(16px, 3.5vw, 32px);
+      --gap:16px;
     }
-    h1, h2, h3, h4 {
-      color: #222;
+
+    /* Base */
+    html, body { height:100%; }
+    body{
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      margin:0;
+      color:var(--text);
+      background:#fff; /* force light theme */
+      line-height:1.6;
+      -webkit-font-smoothing:antialiased;
+      text-rendering:optimizeLegibility;
     }
-    h2 {
-      color: #1f64b1;
+    .container{
+      max-width:var(--maxw);
+      margin:0 auto;
+      padding:calc(var(--pad) + 24px) var(--pad) var(--pad);
     }
-    .caption {
-      font-style: italic;
-      text-align: center;
-      margin-top: 8px;
-      font-size: 0.95em;
+
+    /* Back link (fixed & touch-friendly) */
+    .back-link{
+      position:fixed; inset:16px auto auto 16px;
+      z-index:1000;
+      background:rgba(255,255,255,0.9);
+      border:1px solid #e8e8e8;
+      padding:8px 12px;
+      border-radius:10px;
+      text-decoration:none; font-weight:700;
+      color:#333;
+      font-size:clamp(14px, 2.5vw, 16px);
+      backdrop-filter:saturate(150%) blur(6px);
     }
-    .back-link {
-      font-size: 1em;
-      margin-bottom: 20px;
-      display: inline-block;
-      text-decoration: none;
-      background: #eee;
-      padding: 6px 12px;
-      border-radius: 5px;
-      color: #333;
+
+    /* Type scale */
+    h1{ margin:0 0 8px; font-size:clamp(28px, 4.2vw, 40px); font-weight:800; }
+    h2{ margin:8px 0 16px; font-size:clamp(18px, 2.6vw, 22px); font-weight:700; color:var(--brand); }
+    h3{ margin:24px 0 8px; font-size:clamp(18px, 2.4vw, 21px); font-weight:700; }
+    h4{ margin:18px 0 6px; font-weight:700; }
+    p, li{ font-size:clamp(15px, 2.2vw, 17px); }
+
+    /* Media & captions */
+    img{ display:block; width:100%; height:auto; border-radius:8px; }
+    figure{ margin:0; }
+    figcaption, .caption{
+      font-style:italic; text-align:center;
+      margin-top:8px; font-size:clamp(13px, 2vw, 15px); color:#444;
     }
-    .back-link:hover {
-      background: #ddd;
+
+    /* Flexible media grids that collapse on phones */
+    .wrap{ display:flex; flex-wrap:wrap; gap:var(--gap); justify-content:center; align-items:flex-start; }
+    .wrap .col{ flex:1 1 45%; min-width:260px; max-width:420px; }
+
+    .gallery{ display:flex; flex-wrap:wrap; gap:30px; justify-content:center; margin-top:20px; }
+    .gallery .item{ flex:1 1 380px; max-width:400px; }
+
+    /* Components list (two columns on desktop, one on mobile) */
+    .lists{ display:flex; flex-wrap:wrap; gap:var(--gap); }
+    .lists ul{ flex:1 1 380px; min-width:260px; margin:0; padding-left:20px; }
+
+    /* Equations: readable on mobile */
+    .equation{
+      background:#f7f7f7;
+      padding:12px;
+      font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, "Liberation Mono", "Courier New", monospace;
+      margin:8px 0;
+      border-radius:8px;
+      overflow:auto;
+      -webkit-overflow-scrolling:touch;
+      white-space:pre-wrap;
     }
-    .wrap-container {
-      display: flex;
-      gap: 20px;
-      align-items: flex-start;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-    .wrap-image {
-      flex: 1 1 45%;
-      max-width: 420px;
-    }
-    .wrap-image img {
-      width: 100%;
-      height: auto;
-    }
-    .equation {
-      background: #f7f7f7;
-      padding: 12px;
-      font-family: 'Courier New', monospace;
-      margin: 8px 0;
-      white-space: pre-wrap;
-    }
-    ul {
-      margin-top: -10px;
+
+    /* Small screens: tighter padding */
+    @media (max-width:480px){
+      .container{ padding:56px 14px 18px; }
+      .back-link{ inset:12px auto auto 12px; padding:7px 10px; }
     }
   </style>
 </head>
 <body>
 
-  <div style="position: fixed; top: 20px; left: 20px; z-index: 1000;">
-    <a href="index.html" class="back-link">← Projects</a>
-  </div>
+  <a href="index.html" class="back-link" aria-label="Back to Projects">← Projects</a>
 
-  <h1>Credit Card Bending Machine Design</h1>
-  <h2>Project Timeline: November 2024 – December 2024</h2>
+  <main class="container">
+    <h1>Credit Card Bending Machine Design</h1>
+    <h2>Project Timeline: November 2024 – December 2024</h2>
 
-  <p>This project involved designing a custom credit card bending machine to replicate and test the failure conditions experienced by physical cards during repeated flexing. The setup consisted of a card holder, linear actuator with clamp, load cell, and base plate, all laid out for precise alignment and controlled force application. The user inserts the card into the slot of the card holder, after which the linear actuator is positioned to match the slot height. A custom clamp is then attached to the exposed portion of the card, allowing the actuator to apply a repeatable bending force.</p>
+    <p>This project involved designing a custom credit card bending machine to replicate and test the failure conditions experienced by physical cards during repeated flexing. The setup consisted of a card holder, linear actuator with clamp, load cell, and base plate, all laid out for precise alignment and controlled force application. The user inserts the card into the slot of the card holder, after which the linear actuator is positioned to match the slot height. A custom clamp is then attached to the exposed portion of the card, allowing the actuator to apply a repeatable bending force.</p>
 
-  <h3>Components</h3>
-  <ul>
-    <li>1× Custom Actuator</li>
-    <li>1× Custom Cross Head</li>
-    <li>Polyurethane Clamp Surface</li>
-    <li>M5 Screws and Welding Material</li>
-  </ul>
+    <h3>Components</h3>
+    <div class="lists">
+      <ul>
+        <li>1× Custom Actuator</li>
+        <li>1× Custom Cross Head</li>
+        <li>Polyurethane Clamp Surface</li>
+        <li>M5 Screws and Welding Material</li>
+      </ul>
+    </div>
 
-  <h3>Design Sketch and CAD</h3>
+    <h3>Design Sketch and CAD</h3>
+    <div class="gallery">
+      <figure class="item">
+        <img src="images/creditcard_sketch.jpg" alt="Sketch of the bending machine" loading="lazy">
+        <figcaption>Figure 1. The sketch for the machine</figcaption>
+      </figure>
+      <figure class="item">
+        <img src="images/creditcard_cad.jpg" alt="CAD of the bending machine" loading="lazy">
+        <figcaption>Figure 2. The CAD for the machine</figcaption>
+      </figure>
+    </div>
 
-<div style="display: flex; justify-content: center; align-items: flex-start; gap: 30px; flex-wrap: wrap; margin-top: 20px;">
-  <div style="flex: 1 1 400px; max-width: 400px; text-align: center;">
-    <img src="images/creditcard_sketch.jpg" alt="Sketch of the machine" style="width: 100%; height: 400px; object-fit: cover;">
-    <div style="margin-top: 10px; font-style: italic;">Figure 1. The sketch for the machine</div>
-  </div>
-  <div style="flex: 1 1 400px; max-width: 400px; text-align: center;">
-    <img src="images/creditcard_cad.jpg" alt="CAD of the machine" style="width: 100%; height: 400px; object-fit: cover;">
-    <div style="margin-top: 10px; font-style: italic;">Figure 2. The CAD for the machine</div>
-  </div>
-</div>
+    <h3>Calculations</h3>
 
+    <h4>Defining the Variables</h4>
+    <p><i>F</i> = Point Force on Credit Card<br>
+      <i>σ<sub>y</sub></i> = Yield Strength of 316L Stainless Steel<br>
+      <i>I</i> = Moment of Inertia of Credit Card<br>
+      <i>L</i> = Length of Uninserted Part of the Credit Card<br>
+      <i>t</i> = Thickness of Credit Card
+    </p>
 
-  <h3>Calculations</h3>
-  <h4>Defining the Variables</h4>
-  <p><i>F</i> = Point Force on Credit Card<br>
-  <i>σ<sub>y</sub></i> = Yield Strength of 316L Stainless Steel<br>
-  <i>I</i> = Moment of Inertia of Credit Card<br>
-  <i>L</i> = Length of Uninserted Part of the Credit Card<br>
-  <i>t</i> = Thickness of Credit Card</p>
+    <div class="equation">
+Iₓₓ = (b * h³) / 12
+Iₓₓ = 2.304 × 10⁻¹² m⁴
+    </div>
 
-  <div class="equation">
-  Iₓₓ = (b * h³) / 12<br>
-  Iₓₓ = 2.304 × 10⁻¹² m⁴
-  </div>
+    <p>Bending stress can be calculated from the equation:</p>
 
-  <p>Bending stress can be calculated from the equation:</p>
+    <div class="equation">
+σ = M·y / I
+M = F·L    y = t / 2
+    </div>
 
-  <div class="equation">
-  σ = M·y / I<br>
-  M = F·L &nbsp;&nbsp;&nbsp;&nbsp; y = t / 2
-  </div>
+    <p>Hence,</p>
 
-  <p>Hence,</p>
+    <div class="equation">
+F = (2·σ·I) / (t·L)
+    </div>
 
-  <div class="equation">
-  F = (2·σ·I) / (t·L)
-  </div>
+    <p>Using:</p>
+    <ul>
+      <li>σ<sub>y</sub> = 205 MPa</li>
+      <li>b = 54 mm</li>
+      <li>L = 42.8 mm</li>
+      <li>t = 0.8 mm</li>
+    </ul>
 
-  <p>Using:</p>
-  <ul>
-    <li>σ<sub>y</sub> = 205 MPa</li>
-    <li>b = 54 mm</li>
-    <li>L = 42.8 mm</li>
-    <li>t = 0.8 mm</li>
-  </ul>
+    <p>We calculate:</p>
 
-  <p>We calculate:</p>
+    <div class="equation">
+F = 27.588 N
+    </div>
 
-  <div class="equation">
-  F = 27.588 N
-  </div>
+    <p>This calculation was conducted with a safety factor of 1.</p>
 
-  <p>This calculation was conducted with a safety factor of 1.</p>
+    <figure class="wrap" style="margin-top:8px;">
+      <div class="col" style="flex:1 1 600px; max-width:600px;">
+        <img src="images/cantilever_card.jpg" alt="Cantilever diagram" loading="lazy">
+        <figcaption class="caption">Figure 3.1 The credit card represented as a cantilever</figcaption>
+      </div>
+    </figure>
 
-  <div class="wrap-image" style="max-width: 600px; margin: 0 auto;">
-    <img src="images/cantilever_card.jpg" alt="Cantilever diagram">
-    <div class="caption">Figure 3.1 The credit card represented as a cantilever</div>
-  </div>
+    <h3>Finite Element Analysis of Credit Card</h3>
+    <p>To evaluate bending performance, Finite Element Analysis (FEA) was conducted on both a traditional PVC credit card and a titanium metal card under identical loading conditions. The PVC card showed significant deformation with a maximum von Mises stress of approximately 190 MPa, concentrated near the fixed edge. In contrast, the titanium card exhibited far lower deflection and distributed stress due to its higher modulus of elasticity and yield strength, confirming its superior structural resilience.</p>
 
-<h3>Finite Element Analysis of Credit Card</h3>
-<p>To evaluate bending performance, Finite Element Analysis (FEA) was conducted on both a traditional PVC credit card and a titanium metal card under identical loading conditions. The PVC card showed significant deformation with a maximum von Mises stress of approximately 190 MPa, concentrated near the fixed edge. In contrast, the titanium card exhibited far lower deflection and distributed stress due to its higher modulus of elasticity and yield strength, confirming its superior structural resilience.</p>
+    <div class="wrap" style="margin-top:8px;">
+      <figure class="col" style="flex:1 1 100%; max-width:100%;">
+        <img src="images/fea_pvc.jpg" alt="FEA of traditional PVC credit card" loading="lazy">
+        <figcaption class="caption">Figure 4. The FEA analysis of traditional credit card</figcaption>
+      </figure>
 
-<div class="wrap-container" style="flex-wrap: wrap; gap: 20px; justify-content: center;">
-  <div class="wrap-image" style="flex: 1 1 100%; max-width: 100%;">
-    <img src="images/fea_pvc.jpg" alt="FEA of traditional PVC credit card" style="width: 100%; height: auto;">
-    <div class="caption">Figure 4. The FEA analysis of traditional credit card</div>
-  </div>
-
-  <div class="wrap-image" style="flex: 1 1 100%; max-width: 100%;">
-    <img src="images/fea_titanium.jpg" alt="FEA of titanium credit card" style="width: 100%; height: auto;">
-    <div class="caption">Figure 5. The FEA analysis of titanium credit card</div>
-  </div>
-</div>
+      <figure class="col" style="flex:1 1 100%; max-width:100%;">
+        <img src="images/fea_titanium.jpg" alt="FEA of titanium credit card" loading="lazy">
+        <figcaption class="caption">Figure 5. The FEA analysis of titanium credit card</figcaption>
+      </figure>
+    </div>
+  </main>
 </body>
 </html>
