--- a/index.html
+++ b/index.html
@@ -175,5 +175,14 @@
   </a>
 </div>
 
+<div class="grid">
+  <!-- Underwater Camera System -->
+  <a href="plane.html">
+    <div class="card">
+      <img src="images/final_redesign.jpg" alt="Airfoil Redesign Project">
+      <div class="card-title">Airfoil Redesign Project</div>
+    </div>
+  </a>
+  
 </body>
 </html>
