--- a/index.html
+++ b/index.html
@@ -173,15 +173,15 @@
       <div class="card-title">Mechanics Based Design - Crane Project</div>
     </div>
   </a>
-</div>
 
-  <!-- Underwater Camera System -->
+  <!-- Airfoil Redesign Project (fixed placement) -->
   <a href="plane.html">
     <div class="card">
       <img src="images/final_redesign.jpg" alt="Airfoil Redesign Project">
       <div class="card-title">Airfoil Redesign Project</div>
     </div>
   </a>
+</div>
   
 </body>
 </html>
