--- a/index.html
+++ b/index.html
@@ -181,6 +181,16 @@
       <div class="card-title">Airfoil Redesign Project</div>
     </div>
   </a>
+
+  <!-- Electronics & Instrumentation Project -->
+  <a href="sensor.html">
+    <div class="card">
+      <img src="images/circuit_tinkercad.jpg" alt="Electronics & Instrumentation Project">
+      <div class="card-title">Electronics & Instrumentation Project</div>
+    </div>
+  </a>
+
+  
 </div>
   
 </body>
